feat:增加将解析后的内容推送到notion

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,6 +1,7 @@
 [uwsgi]
 http=0.0.0.0:5000
 chdir=/root/workspace/math_server
+logto=%(chdir)/static/mlog/log.log
 stats=%(chdir)/uwsgi/uwsgi.status
 pidfile=%(chdir)/uwsgi/uwsgi.pid
 wsgi-file=%(chdir)/app.py
